# seamless

./: Cargo.toml  LICENSE
src/: main.rs
src/lib/: mod.rs
src/lib/arch_window/: mod.rs  window.rs
src/lib/platform/: mod.rs  monitor.rs  window.rs  x_windows_monitor.rs
src/lib/rpc/: mod.rs  rpc_client.rs  rpc_client_proxy.rs  rpc_message.rs  rpc_protocol.rs  rpc_server.rs  rpc_server_proxy.rs
src/server/: server.rs
