[package]
name = "seamless"
version = "0.1.0"
authors = ["lieh <lienhe@xiaomi.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.9.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }